--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
     <div class="container-header">
       <span class="todays-date"></span>
       <div class="search-container">
-          <input type="text" placeholder="Change your location...." name="location" id="location-input" pattern="[A-Za-z]" />
+          <input type="text" placeholder="Change your location...." name="location" id="location-input" autocomplete="off" />
           <img src="./assets/search_FILL0_wght400_GRAD0_opsz24.svg" id="mag-glass" />
       </div>
       
