added error handling for invalid char and empty api response

--- a/src/template.html
+++ b/src/template.html
@@ -15,8 +15,9 @@
           <input type="text" placeholder="Change your location...." name="location" id="location-input" autocomplete="off" />
           <img src="./assets/search_FILL0_wght400_GRAD0_opsz24.svg" id="mag-glass" />
       </div>
-      
-  
+    </div>
+    <div>
+      <span class="input-error-span hide">Error: City does not exist</span>
     </div>
     <h3 id="location"></h3>
     <div class="degrees-container">
